4.x/build-strategies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-svc
  labels:
    app: build     
spec:
  type: ClusterIP
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    app: build
