4.x/build-strategies/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: build
  name: build-rt
spec:
  path: /basicop/add
  port:
    targetPort: 8001
  to:
    kind: Service
    name: build-svc
    weight: 100
  wildcardPolicy: None
